Makefile (#12)
* makefile edt

* add win

* win path fix

* win path fix

* ltl fix

* fix exception on save profile

---------

Co-authored-by: Serhii Rudenko <serhii.rudenko@prozorro.sale>